fixed readability issues for quiz page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -88,7 +88,7 @@ header .row {
 }
 
 section {
-  background-image: url('gradientBack.jpg');
+  /* background-image: url('gradientBack.jpg'); */
 }
 
 section.container .row {
